3D computers.jsx work

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link href="./public/logo.png" rel="icon" type="image"/>
+    <link href="/logo.png" rel="icon" type="image"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Xndr | Portfolio</title>
   </head>
